# cmake_demo

./: CMakeLists.txt  RAEDME.md  README.md  README.md.tmp
demo_config/: CMakeLists.txt
demo_doc/: CMakeLists.txt  README.md
demo_resources/: CMakeLists.txt
demo_src/: CMakeLists.txt
demo_src/common_modules/: CMakeLists.txt  print_component.c  print_component.h
demo_src/main_module/: CMakeLists.txt  main.c
demo_src/module1/: CMakeLists.txt  module1_component.c  module1_component.h
demo_src/module2/: CMakeLists.txt  module2_component.c  module2_component.h
demo_src/test/: CMakeLists.txt
demo_src/test/common_modules/: CMakeLists.txt  common_test.c
demo_src/test/main_module/: CMakeLists.txt  main_module_test.c
demo_src/test/module1/: CMakeLists.txt  module1_test.c
demo_src/test/module2/: CMakeLists.txt  module2_test.c
